--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -521,6 +521,15 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.1": "Antidote",
@@ -561,38 +570,23 @@
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: TALENTS - NAMES",
 
-	"mmorpg.talent.battle_mage": "Battle Mage",
 	"mmorpg.talent.blood_mage": "Blood Mage",
 	"mmorpg.talent.divinity": "Divinity",
-	"mmorpg.talent.duelist": "Duelist",
 	"mmorpg.talent.elemental_purity": "Elemental Purity",
 	"mmorpg.talent.harmony": "Harmony",
 	"mmorpg.talent.hunter": "Hunter",
 	"mmorpg.talent.mage": "Mage",
 	"mmorpg.talent.mana_battery": "Mana Battery",
 	"mmorpg.talent.mantra": "Mantra",
-	"mmorpg.talent.nightcrawler": "Night Crawler",
-	"mmorpg.talent.overflowing_vitality": "Overflowing Vitality",
+	"mmorpg.talent.ms_all_in": "Stare of Abyss",
 	"mmorpg.talent.refined_taste": "Refined Taste",
-	"mmorpg.talent.scion": "Scion",
 	"mmorpg.talent.sniper": "Sniper",
-	"mmorpg.talent.songbird": "Songbird",
-	"mmorpg.talent.spell_slinger": "Spellslinger",
 	"mmorpg.talent.steady_hand": "Steady Hand",
-	"mmorpg.talent.templar": "Templar",
 	"mmorpg.talent.tormentor": "Tormentor",
 	"mmorpg.talent.true_hit": "True Hit",
+	"mmorpg.talent.warlock": "Warlock",
 	"mmorpg.talent.warrior": "Warrior",
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1134,6 +1128,7 @@
 	"mmorpg.stat.lightning_weapon_damage": "Lightning Damage",
 	"mmorpg.stat.magic_find": "Magic Find",
 	"mmorpg.stat.magic_shield": "Magic Shield",
+	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
 	"mmorpg.stat.magic_shield_ooc_regen": "Out of Combat Magic Shield Regen",
 	"mmorpg.stat.magic_shield_regen": "Magic Shield Regen",
 	"mmorpg.stat.mana": "Mana",
@@ -1185,7 +1180,6 @@
 	"mmorpg.stat.projectile_cdr": "Projectile Spell Cooldown Reduction",
 	"mmorpg.stat.projectile_damage": "Projectile Damage",
 	"mmorpg.stat.projectile_spell_dmg": "Projectile Spell Damage",
-	"mmorpg.stat.renamed_or_deleted_stat": "Unknown",
 	"mmorpg.stat.scepter_damage": "Scepter Damage",
 	"mmorpg.stat.shield_cdr": "Shield Spell Cooldown Reduction",
 	"mmorpg.stat.shield_duration": "Shield Strength",
@@ -1223,10 +1217,10 @@
 	"mmorpg.stat.totem_resto": "Your Totem restoration effects are [VAL1]% stronger.",
 	"mmorpg.stat.totem_shield": "Your Totem shield effects are [VAL1]% stronger.",
 	"mmorpg.stat.totem_spell_dmg": "Totem Spell Damage",
-	"mmorpg.stat.transfer_health_to_physical_weapon_damage": "§7Transfer §a[VAL1]%§7 of your §c❤ Health§7§7 towards your §6☀ Physical Damage§7",
 	"mmorpg.stat.trap_cdr": "Trap Spell Cooldown Reduction",
 	"mmorpg.stat.trap_spell_dmg": "Trap Spell Damage",
 	"mmorpg.stat.trident_damage": "Trident Damage",
+	"mmorpg.stat.unknown": "Unknown Stat",
 	"mmorpg.stat.water_any_wep_damage": "Cold Weapon Damage",
 	"mmorpg.stat.water_dmg_when_target_low_hp": "§7Execute targets bellow 30% health, dealing §a[VAL1]§7% increased  §b☀ Cold§7",
 	"mmorpg.stat.water_dot_damage": "Cold Damage Over Time",
@@ -1344,68 +1338,6 @@
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
 
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
-
-	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
-	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
-	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
-	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
-	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
-	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
-	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
-	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
-	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.dash": "Dash in your direction and gain slowfall.",
-	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
-	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
-	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
-	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
-	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
-	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
-	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
-	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
-	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
-	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
-	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
-	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
-	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
-	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
-	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
-	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
-	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
-	"spell.desc.make_arrows": "Produce a stack of arrows.",
-	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
-	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
-	"spell.desc.nature_balm": "Gives buff to allies nearby:",
-	"spell.desc.overload": "Gives effect to self.",
-	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
-	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
-	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
-	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
-	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
-	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
-	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
-	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
-	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
-	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
-	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
-	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
-	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
-	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
-	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
-	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
-	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
-	"spell.desc.undying_will": "Gives buff to self.",
-	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
-	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
-	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
-	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
-
-
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
 
 	"mmorpg.stat_desc.dex_dmg_received": "Magic damage are mage spells, like fireball.",
@@ -1514,6 +1446,7 @@
 	"mmorpg.stat_desc.lightning_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.magic_find": "Adds chance for higher rarity of items found.",
 	"mmorpg.stat_desc.magic_shield": "Like health, but works differently and might need different ways to restore.",
+	"mmorpg.stat_desc.magic_shield_heal": "A % of your healing goes to your magic shield too.",
 	"mmorpg.stat_desc.magic_shield_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.mana": "Mana is used to cast spells",
 	"mmorpg.stat_desc.mana_per_sec": "Restore % of your total per regen tick.",
@@ -1567,7 +1500,69 @@
 	"mmorpg.stat_desc.water_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
 
-"_comment": " [CATEGORY]: STATS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
+
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
+	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
+	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
+	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
+	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
+	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
+	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
+	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
+	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
+	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.dash": "Dash in your direction and gain slowfall.",
+	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
+	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
+	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
+	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
+	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
+	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
+	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
+	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
+	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
+	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
+	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
+	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
+	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
+	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
+	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
+	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
+	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
+	"spell.desc.make_arrows": "Produce a stack of arrows.",
+	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
+	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
+	"spell.desc.nature_balm": "Gives buff to allies nearby:",
+	"spell.desc.overload": "Gives effect to self.",
+	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
+	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
+	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
+	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
+	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
+	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
+	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
+	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
+	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
+	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
+	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
+	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
+	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
+	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
+	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
+	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
+	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
+	"spell.desc.undying_will": "Gives buff to self.",
+	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
+	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
+	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
+	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS"
 
 
 }
