--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -299,6 +299,7 @@
 	"mmorpg.affix.of_gluttony": "Of Gluttony",
 	"mmorpg.affix.of_less_cd": "Of Repetition",
 	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
 	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
 	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
 	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
@@ -579,13 +580,20 @@
 	"mmorpg.talent.all_lightning_damage_big": "Major Lightning Damage",
 	"mmorpg.talent.all_penetration_big": "Major All Penetration",
 	"mmorpg.talent.all_physical_damage_big": "Major Physical Damage",
+	"mmorpg.talent.all_resist_big": "Major All Resistance",
 	"mmorpg.talent.all_water_damage_big": "Major Cold Damage",
+	"mmorpg.talent.area_dmg_big": "Major Area Damage",
+	"mmorpg.talent.armor_penetration_percent_big": "Major Armor Penetration",
 	"mmorpg.talent.armor_percent_big": "Major Armor",
+	"mmorpg.talent.axe_damage_big": "Major Axe Damage",
 	"mmorpg.talent.blood_mage": "Blood Mage",
+	"mmorpg.talent.bow_damage_big": "Major Bow Damage",
 	"mmorpg.talent.cdr_big": "Major Cooldown Reduction",
 	"mmorpg.talent.chaos_penetration_big": "Major Chaos Penetration",
+	"mmorpg.talent.chaos_resist_big": "Major Chaos Resistance",
 	"mmorpg.talent.critical_damage_big": "Major Crit Damage",
 	"mmorpg.talent.critical_hit_big": "Major Crit Chance",
+	"mmorpg.talent.crossbow_damage_big": "Major Crossbow Damage",
 	"mmorpg.talent.dex_big": "Major Dexterity",
 	"mmorpg.talent.dex_dmg_big": "Major Ranged Damage",
 	"mmorpg.talent.divinity": "Divinity",
@@ -593,19 +601,23 @@
 	"mmorpg.talent.dot_dmg_big": "Major Damage over Time",
 	"mmorpg.talent.elemental_penetration_big": "Major Elemental Penetration",
 	"mmorpg.talent.elemental_purity": "Elemental Purity",
+	"mmorpg.talent.elemental_resist_big": "Major Elemental Resistance",
 	"mmorpg.talent.energy_percent_big": "Major Energy",
 	"mmorpg.talent.energy_regen_percent_big": "Major Energy Regen",
 	"mmorpg.talent.fire_penetration_big": "Major Fire Penetration",
+	"mmorpg.talent.fire_resist_big": "Major Fire Resistance",
 	"mmorpg.talent.guardian": "Guardian",
 	"mmorpg.talent.harmony": "Harmony",
 	"mmorpg.talent.health_percent_big": "Major Health",
 	"mmorpg.talent.health_regen_percent_big": "Major Health Regen",
 	"mmorpg.talent.hp_hp_regen_big": "Major Health",
 	"mmorpg.talent.hp_mana_big": "Major Mana",
+	"mmorpg.talent.inc_aoe_big": "Major Area of Effect",
 	"mmorpg.talent.int_big": "Major Intelligence",
 	"mmorpg.talent.int_dmg_big": "Major Spell Damage",
 	"mmorpg.talent.lifesteal_big": "Major Lifesteal",
 	"mmorpg.talent.lightning_penetration_big": "Major Lightning Penetration",
+	"mmorpg.talent.lightning_resist_big": "Major Lightning Resistance",
 	"mmorpg.talent.mage": "Mage",
 	"mmorpg.talent.magic_shield_percent_big": "Major Magic Shield",
 	"mmorpg.talent.magic_shield_regen_percent_big": "Major Magic Shield Regen",
@@ -616,6 +628,9 @@
 	"mmorpg.talent.mana_regen_percent_big": "Major Mana Regen",
 	"mmorpg.talent.mantra": "Mantra",
 	"mmorpg.talent.ms_all_in": "Stare of Abyss",
+	"mmorpg.talent.phys_to_all_big": "Major Physical to All Damage",
+	"mmorpg.talent.phys_to_chaos_big": "Major Physical to Chaos Damage",
+	"mmorpg.talent.phys_to_elemental_big": "Major Physical to Elemental Damage",
 	"mmorpg.talent.phys_to_fire_big": "Major Physical to Fire Damage",
 	"mmorpg.talent.phys_to_lightning_big": "Major Physical to Lightning Damage",
 	"mmorpg.talent.phys_to_water_big": "Major Physical to Cold Damage",
@@ -630,14 +645,18 @@
 	"mmorpg.talent.spell_lightning_damage_big": "Major Lightning Spells Damage",
 	"mmorpg.talent.spell_water_damage_big": "Major Cold Spells Damage",
 	"mmorpg.talent.spirit_cost_big": "Major Spirit Cost Reduction",
+	"mmorpg.talent.staff_damage_big": "Major Staff Damage",
 	"mmorpg.talent.steady_hand": "Steady Hand",
 	"mmorpg.talent.str_big": "Major Strength",
 	"mmorpg.talent.str_dmg_big": "Major Melee Damage",
+	"mmorpg.talent.sword_damage_big": "Major Sword Damage",
 	"mmorpg.talent.tormentor": "Tormentor",
+	"mmorpg.talent.trident_damage_big": "Major Trident Damage",
 	"mmorpg.talent.true_hit": "True Hit",
 	"mmorpg.talent.warlock": "Warlock",
 	"mmorpg.talent.warrior": "Warrior",
 	"mmorpg.talent.water_penetration_big": "Major Cold Penetration",
+	"mmorpg.talent.water_resist_big": "Major Cold Resistance",
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
 
@@ -1200,6 +1219,9 @@
 	"mmorpg.stat.offensive_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Offensive effects you cast.",
 	"mmorpg.stat.offensive_eff_duration": "§7§a[VAL1]§7% to duration of Offensive effects on you.",
 	"mmorpg.stat.perc_self_hp_dmg_when_immo": "§7Deal §a[VAL1]§7% of your health as §5☀ Chaos§7 Damage when you cast immobilizing effects",
+	"mmorpg.stat.phys_to_all": "Physical to All Damage",
+	"mmorpg.stat.phys_to_chaos": "Physical to Chaos Damage",
+	"mmorpg.stat.phys_to_elemental": "Physical to Elemental Damage",
 	"mmorpg.stat.phys_to_fire": "Physical to Fire Damage",
 	"mmorpg.stat.phys_to_lightning": "Physical to Lightning Damage",
 	"mmorpg.stat.phys_to_water": "Physical to Cold Damage",
@@ -1285,28 +1307,6 @@
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
-	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
-	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
-	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
-	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
-	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
-	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
-	"mmorpg.unique_gear.insight.name": "Insight",
-	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
-	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
-	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
-	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
-	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
-	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
-	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
-	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 	"mmorpg.gear_type.bow": "Bow",
@@ -1342,6 +1342,28 @@
 	"mmorpg.gearslot.sword": "Sword",
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
+	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
+	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
+	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
+	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
+	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
+	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
+	"mmorpg.unique_gear.insight.name": "Insight",
+	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
+	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
+	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
+	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
+	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
+	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
+	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
+	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1384,68 +1406,6 @@
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
-
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
-
-	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
-	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
-	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
-	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
-	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
-	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
-	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
-	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
-	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.dash": "Dash in your direction and gain slowfall.",
-	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
-	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
-	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
-	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
-	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
-	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
-	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
-	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
-	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
-	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
-	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
-	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
-	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
-	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
-	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
-	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
-	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
-	"spell.desc.make_arrows": "Produce a stack of arrows.",
-	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
-	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
-	"spell.desc.nature_balm": "Gives buff to allies nearby:",
-	"spell.desc.overload": "Gives effect to self.",
-	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
-	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
-	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
-	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
-	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
-	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
-	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
-	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
-	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
-	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
-	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
-	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
-	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
-	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
-	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
-	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
-	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
-	"spell.desc.undying_will": "Gives buff to self.",
-	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
-	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
-	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
-	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
 
 
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
@@ -1609,7 +1569,69 @@
 	"mmorpg.stat_desc.water_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
 
-"_comment": " [CATEGORY]: STATS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
+
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
+	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
+	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
+	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
+	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
+	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
+	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
+	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
+	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
+	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.dash": "Dash in your direction and gain slowfall.",
+	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
+	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
+	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
+	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
+	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
+	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
+	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
+	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
+	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
+	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
+	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
+	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
+	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
+	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
+	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
+	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
+	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
+	"spell.desc.make_arrows": "Produce a stack of arrows.",
+	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
+	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
+	"spell.desc.nature_balm": "Gives buff to allies nearby:",
+	"spell.desc.overload": "Gives effect to self.",
+	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
+	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
+	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
+	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
+	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
+	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
+	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
+	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
+	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
+	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
+	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
+	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
+	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
+	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
+	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
+	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
+	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
+	"spell.desc.undying_will": "Gives buff to self.",
+	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
+	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
+	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
+	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS"
 
 
 }
