--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -138,3 +138,4 @@ Hopefully this will be more fun than the generic spells of before, I hope I can 
 - map rarity and tier now correlate
 - map items now show the tier hp and dmg mob bonus on the tooltip
 - runewords changed back to old system, existing runeword uniques are now just normal uniques
+- changed rune drop requirements a bit, and made runes have all stats (for for any gear family)
