--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -142,3 +142,6 @@ Hopefully this will be more fun than the generic spells of before, I hope I can 
 - EVEN MORE upgraded textures!
 - added dual wielding. Right now only certain melee weapons that make sense can be placed in the offhand to grant 25% of its original stats.
 This is probably still way more op than any current normal offhand so will probably be tweaked
+
+v.5.3.9
+- picking a hotbar spell now returns you to skill gem screens/gui
